Refactored styling in header section, changed decription in feature section and education section

--- a/index.html
+++ b/index.html
@@ -96,10 +96,20 @@
               </div>
               <div class="about">
                 <h2>"Gwent" - Memory Test Game</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloremque quidem illo doloribus ipsa, fa</p>
+                <p>Player needs to find two the same cards. At first turn, a player chooses a random card and try to guess where is the second the same card. If the player is not successful both cards move to the face-down possession. The player tries to remember the card’s faces and cards location. When the player finds two the same cards, they stay face up and the player starts the next turn. Technologies used: JavaScript, HTML, CSS</p>
                 <a href="https://github.com/Slav666/booking-app">GitHub</a>
             </div>
             </div>
+            <div class="project clearfix">
+                    <div class="web">
+                      <img src="images/portfolio6.png" alt="portfolio number 4">
+                    </div>
+                    <div class="about">
+                      <h2>My portfolio website</h2>
+                      <p>This is my portfolio website. I know, the website is simple but I wanted to learn responsive web design and practise CSS. Every element of this page I have done myself. Technologies used: HTML, CSS, Responsive web design. </p>
+                      <a href="https://github.com/Slav666/booking-app">GitHub</a>
+                  </div>
+                  </div>
           </section>
 
     <!-- section education -->
@@ -115,8 +125,9 @@
         <div class="education clearfix">
             <img src="images/education2.jpg" alt="">
             <h2>Home Learing College</h2>
-            <h3>Qualification: Certified Internet Webmaster Foundation.</h3></br>
-            <h4>November 2018 - April 2019</h4>
+            <h3>Qualification: Certified Internet Webmaster Foundation.</h3>
+            <br>
+            <h4>January 2011 - February 2012</h4>
             <p>This course containts three modules: Site Development, Internet Business, Network Technology.</p>
             <p>Site Development: Web site development using Hypertext Markup Language (HTML). 
                 Web page development using: images, hyperlinks, tables, forms.
@@ -138,8 +149,8 @@
         <div class="education clearfix">
             <img src="images/education3.png" alt="">
             <h2>Udemy</h2>
-            <h3> Certificate of Completion: Java for absolute beginners</h3></br>
-   
+            <h3>Qualification: Certificates of Completion</h3>
+            <br>
             <h4>July 2018 - till now</h4>
             <p>Udemy.com is the world's largest online learning platform. 
                 It is aimed at professional adults and students. 
