--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="about">
                     <h2>Restaurant Booking App</h2>
-                    <p>The restaurant needs a way to book and arrange tables for customers who are booking over the phone. This system is for the staff to use. The application allows the manager to book a table at the restaurant for a particular customer at a particular time, date and also enables update a booking. Technologies used: Java, Spring, React, PSQL.</p>
+                    <p>GROUP PROJECT. The restaurant needs a way to book and arrange tables for customers who are booking over the phone. This system is for the staff to use. The application allows the manager to book a table at the restaurant for a particular customer at a particular time, date and also enables update a booking. Technologies used: Java, Spring, React, PSQL.</p>
                     <a href="https://github.com/Slav666/booking-app">See my code here</a>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="about">
                     <h2>"Slainte" - Beer Tracking App</h2>
-                    <p>A user can add their favourite beer to the database application, edit and delete a beer from the database. The country of the beer production, which has been chosen by a user, will be marked on the Earth map with red colour. Technologies used: JavaScript, Node.js, Webpack, HTML, CSS, MongoDB.</p>
+                    <p>GROUP PROJECT. A user can add their favourite beer to the database application, edit and delete a beer from the database. The country of the beer production, which has been chosen by a user, will be marked on the Earth map with red colour. Technologies used: JavaScript, Node.js, Webpack, HTML, CSS, MongoDB.</p>
                     <a href="https://github.com/Slav666/js-group-project-beer">See my code here</a>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="about">
                     <h2>Animal Shelter App</h2>
-                    <p>The Scottish Animal Shelter is a management system to keep track of their animals and owners. The shelter has a list of potential new owners for animals and owners who have already adopted animals. A user can add a new owner to the list, can add a new animal to be adopted or to be added to the quarantine list. Technologies used: Ruby, Sinatra, HTML, CSS, PSQL.</p>
+                    <p>SOLO PROJECT. The Scottish Animal Shelter is a management system to keep track of their animals and owners. The shelter has a list of potential new owners for animals and owners who have already adopted animals. A user can add a new owner to the list, can add a new animal to be adopted or to be added to the quarantine list. Technologies used: Ruby, Sinatra, HTML, CSS, PSQL.</p>
                     <a href="https://github.com/Slav666/Solo-project_animals-shelter ">See my code here</a>
                 </div>
             </div>
@@ -97,21 +97,34 @@
                     <img src="images/portfolio4.png" alt="Image of Memory Test Game project">
                 </div>
                 <div class="about">
-                    <h2>"Gwent" - Memory Test Game - Solo project</h2>
-                    <p>Player needs to find two the same cards. At first turn, a player chooses a random card and try to guess where is the second the same card. If the player is not successful both cards move to the face-down position. The player tries to remember the card’s faces and cards location. When the player finds two the same cards, they stay face up and the player starts the next turn. Technologies used: JavaScript, HTML, CSS.</p>
+                    <h2>"Gwent" - Memory Test Game</h2>
+                    <p>SOLO PROJECT. Player needs to find two the same cards. At first turn, a player chooses a random card and try to guess where is the second the same card. If the player is not successful both cards move to the face-down position. The player tries to remember the card’s faces and cards location. When the player finds two the same cards, they stay face up and the player starts the next turn. Technologies used: JavaScript, HTML, CSS.</p>
                     <a href="https://github.com/Slav666/Gwent_game">See my code here</a>
                 </div>
             </div>
             <div class="project clearfix">
                     <div class="web">
-                      <img src="images/portfolio6.png" alt="Image of the portfolio website">
+                      <img src="images/portfolio5.png" alt="Image of the portfolio website">
                     </div>
                     <div class="about">
                       <h2>My portfolio website</h2>
-                      <p>This is my portfolio website. I know, the website is simple but I wanted to learn responsive web design and practise CSS. Every element of this page I have created myself. Technologies used: HTML, CSS, Responsive web design. </p>
+                      <p>SOLO PROJECT. This is my portfolio website. I know, the website is simple but I wanted to learn responsive web design and practise CSS. Every element of this page I have created myself. Technologies used: HTML, CSS, Responsive web design.</p>
                       <a href="https://github.com/Slav666/Portfolio-project">See my code here</a>
                   </div>
             </div>
+                  
+                  <div class="project clearfix">
+                        <div class="web">
+                            <img src="images/portfolio6.png" alt="Image ToDo list app">
+                        </div>
+                        <div class="about">
+                            <h2>ToDo List app</h2>
+                            <p>SOLO PROJECT. This application helps to create a list of all user tasks. The user can add a new task to the list with the task priority and predicted finish date. The user can see the list of all tasks with two buttons: done and remove.
+                                    "Done" button move selected tasks to the finalised section. "Remove "button deletes selected tasks. Technologies used: React, HTML, CSS.</p>
+                            <a href="https://github.com/Slav666/Gwent_game">See my code here</a>
+                        </div>
+                    </div>
+            
         </section>
 
     <!-- section education -->
