Create the main.js file with a  slideList array

--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
     <div class="detail"> <img src="images/contact5.png" alt="linkedin logo"><a href="https://www.linkedin.com/in/slawomir-dyk-b35ab1177/"><p id="link">My Linkedin Account</p></a></div>
     <footer>Designed and Developed by Slawomir Dyk</footer>
     </section>
+
+    <script src="main.js"></script>
     
 </body>
 </html>
