--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <span id="four"></span>
                 <span id="five"></span>
                 <span id="six"></span>
+                <span id="seven"></span>
                 
             </div>
             <div class="info">
